- fixed: overflow y on index mobile page, consolidate css

--- a/assets/css/indexStylesMobile.css
+++ b/assets/css/indexStylesMobile.css
@@ -8,6 +8,7 @@
         height: 100%;
         margin: 0px;
         padding: 0px;
+        overflow-y: hidden;
     }
 
     section#mobileHome {
@@ -48,57 +49,23 @@
 
     /* Display None */
 
-    #thumbnail {
+    #thumbnail, .navbarDesk, #topArrow {
         display: none;
     }
 
-    .navbarDesk {
-        display: none;
-    }
-
-    #spheres {
-        display: none;
-        margin: 0;
-    }
-
-    #homeSection {
-        display:none;
-        margin: 0;
-    }
-
-    #workSection {
-        display:none;
-        margin: 0;
-    }
-
-    #workSectionCont {
-        display:none;
-        margin: 0;
-    }
-
-    #resumeSection {
-        display: none;
-        margin: 0;
-    }
-
-    #resumeSectionCont {
-        display: none;
-        margin: 0;
-    }
-
-    #downloadSection {
-        display: none;
-        margin: 0;
-    }
-
-    #contactSection {
-        display: none;
-        margin: 0;
-    }
-
+    #spheres, 
+    #homeSection, 
+    #workSection, 
+    #workSectionCont, 
+    #resumeSection, 
+    #resumeSectionCont, 
+    #downloadSection, 
+    #contactSection, 
     #aboutSection {
         display: none;
+        margin: 0;
     }
+
 
     /* Footer Styles */
     footer {
@@ -132,10 +99,6 @@
         padding: 5px;
         border-radius: 5px;
     }
-
-    #topArrow {
-        display: none;
-    }
-    
+ 
 
 }
